Fixed misc. responsive layout issues

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -2,7 +2,7 @@
     align-items: baseline;
     display: flex;
     justify-content: space-between;
-    max-width: 100%;
+    width: 100%;
     padding: 1rem;
     z-index: 999;
 
