--- a/src/components/heroStyles.module.scss
+++ b/src/components/heroStyles.module.scss
@@ -37,7 +37,7 @@
     margin: auto;
     max-width: 700px;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 750px) {
         flex-direction: column;
         margin: auto;
         min-height: 200px;
