--- a/src/components/projectCards/projectCardStyles.module.scss
+++ b/src/components/projectCards/projectCardStyles.module.scss
@@ -83,13 +83,18 @@
     border-radius: 1000px;
     color: white;
     display: flex;
+    font-size: 2rem;
     height: 70px;
     justify-content: space-around;
+    line-height: 2rem;
     margin: 0.5rem auto;
+    padding: 0.85rem;
     width: 100%;
 
     @media screen and (min-width: 760px) {
         height: 40px;
+        font-size: 1.5rem;
+        padding: 0.25rem;
         width: 150px;
     }
 }
@@ -100,13 +105,18 @@
     border-radius: 1000px;
     color: white;
     display: flex;
+    font-size: 2rem;
     height: 70px;
     justify-content: space-around;
+    line-height: 2rem;
     margin: 0.5rem auto;
+    padding: 0.85rem;
     width: 100%;
 
     @media screen and (min-width: 760px) {
         height: 40px;
+        font-size: 1.5rem;
+        padding: 0.25rem;
         width: 150px;
     }
 }
