--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -16,6 +16,8 @@
 }
 
 .text-container {
+    text-align: left;
+    padding: 1rem 0.75rem;
     
     @media screen and (min-width: 740px) {
         text-align: left;
